--- a/sass/4_components/_buttons.scss
+++ b/sass/4_components/_buttons.scss
@@ -5,7 +5,7 @@
     box-shadow:         0 5px 8px rgba(0, 0, 0, .2);
     background-image:   linear-gradient(to bottom right, $secondary, $primary);
     color:              $text-secondary;
-    font-size:          .9rem;
+    font-size:          1rem;
     font-weight:        $medium;
     cursor: pointer;
     
