--- a/sass/4_components/_cards.scss
+++ b/sass/4_components/_cards.scss
@@ -5,6 +5,11 @@
     border-radius: $border-radius;
     background-color: $bg-primary;
 
+    p {
+        font-size: 1.1em;
+        font-weight: $light;
+    }
+
     &__img {
         width: 100%;
         height: 170px;
@@ -20,12 +25,6 @@
 
     &__title {
         margin-bottom: .2rem;
-        font-size: $h3-font-size;
-        font-weight: $bold;
-    }
-
-    &__descr {
-        font-weight: $light;
     }
 }
 
@@ -39,7 +38,10 @@
     padding: .4em .7em;
     border-radius: $border-radius-sm;
     background-color: $accent;
-    color: darken($accent, 40);
-    font-size: .8rem;
-    font-weight: bold;
+    color: darken($accent, 30);
+    
+    p {
+        font-size: .8rem;
+        font-weight: $bold;
+    }
 }
