--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 20px;
+  padding: 1.5rem;
   background-color: #333333;
 }
 .footer li {
@@ -303,7 +303,7 @@ h4 {
   border-radius: 1rem;
   background-color: #fff;
 }
-.card p {
+.card__descr {
   font-size: 1.1em;
   font-weight: 300;
 }
@@ -329,12 +329,10 @@ h4 {
   position: absolute;
   right: 10px;
   top: 10px;
-  padding: 0.4em 0.7em;
+  padding: 0.45em 0.9em;
   border-radius: 0.2rem;
   background-color: #99E2D0;
-  color: #32b091;
-}
-.new p {
+  color: #2c9c81;
   font-size: 0.8rem;
   font-weight: 700;
 }
@@ -454,7 +452,7 @@ h4 {
   font-size: 1.4em;
 }
 
-.search-box {
+.location {
   flex-direction: row;
   display: flex;
   justify-content: center;
@@ -464,12 +462,12 @@ h4 {
   background-color: #e6e6e6;
   color: #333333;
 }
-.search-box__icon {
+.location__icon {
   position: relative;
   right: 20px;
   color: #333333;
 }
-.search-box__input {
+.location__input {
   font-weight: 500;
 }
 
@@ -486,7 +484,7 @@ h4 {
 }
 .top-banner__title {
   margin-bottom: 0.5em;
-  padding: 0 20px;
+  padding: 0 30px;
 }
 .top-banner__descr {
   margin-bottom: 1.5em;
@@ -500,7 +498,7 @@ h4 {
 }
 
 .steps, .restaurants {
-  padding: 3em 1.5em;
+  padding: 3rem 1.5rem;
 }
 .steps__wrapper {
   margin-bottom: 20px;
@@ -509,7 +507,7 @@ h4 {
 .step {
   flex-direction: row;
   display: flex;
-  justify-content: justify;
+  justify-content: flex-start;
   align-items: center;
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
   margin: 20px 0 0 10px;
