--- a/css/prefixed/main.css
+++ b/css/prefixed/main.css
@@ -1,4 +1,4 @@
-.top-banner__descr, .search-box__icon, .search-box {
+.top-banner__descr, .location__icon, .location {
   color: #3b3b3b;
 }
 
@@ -107,7 +107,7 @@ p {
   padding: 20px;
 }
 
-.search-box {
+.location {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -119,7 +119,7 @@ p {
           align-items: center;
   background-color: #d5d5d5;
 }
-.search-box__icon {
+.location__icon {
   padding: 10px;
 }
 
