--- a/sass/4_components/_cards.scss
+++ b/sass/4_components/_cards.scss
@@ -5,7 +5,7 @@
     border-radius: $border-radius;
     background-color: $bg-primary;
 
-    p {
+    &__descr {
         font-size: 1.1em;
         font-weight: $light;
     }
@@ -35,13 +35,10 @@
     position: absolute;
     right: 10px;
     top: 10px;
-    padding: .4em .7em;
+    padding: .45em .9em;
     border-radius: $border-radius-sm;
     background-color: $accent;
-    color: darken($accent, 30);
-    
-    p {
-        font-size: .8rem;
-        font-weight: $bold;
-    }
+    color: darken($accent, 35);
+    font-size: .8rem;
+    font-weight: $bold;
 }
