--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import '1_abstracts/variables';
 @import '1_abstracts/functions';
 @import '1_abstracts/mixins';
+@import '1_abstracts/breakpoints';
 
 @import '2_base/reset';
 @import '2_base/typography';
