--- a/sass/2_base/_typography.scss
+++ b/sass/2_base/_typography.scss
@@ -52,3 +52,15 @@ h4 {
 %text-uppercase {
     text-transform: uppercase;
 }
+
+@include tablet-only {
+    html {
+        font-size: 16px;
+    }
+}
+
+@include desktop-only {
+    html {
+        font-size: 18px;
+    }
+}
