--- a/css/main.css
+++ b/css/main.css
@@ -571,11 +571,19 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -40px;
+  position: relative;
+  margin-top: 200px;
   padding: 10px 20px 80px 20px;
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
   background-color: #f2f2f2;
+}
+.menu__photo {
+  position: absolute;
+  top: -200px;
+  right: 0;
+  left: 0;
+  z-index: -1;
 }
 .menu__wrapper {
   background-color: #f2f2f2;
@@ -588,10 +596,6 @@ h4 {
 .menu .fa-heart {
   margin-right: 10px;
   font-size: 1.5rem;
-}
-
-.menu-photo {
-  z-index: -1;
 }
 
 .menu-catagory {
