--- a/sass/4_components/_dish.scss
+++ b/sass/4_components/_dish.scss
@@ -107,3 +107,13 @@
         }
     }
 }
+
+@include desktop-only {
+    .dish {
+        width: 30vw;
+
+        &__content-wrapper {
+            @include flex(true, center, flex-start);
+        }
+    }
+}
