--- a/css/main.css
+++ b/css/main.css
@@ -626,10 +626,10 @@ h4 {
   font-size: 1.5rem;
 }
 
-.menu-catagory {
+.menu__catagory {
   margin-bottom: 2rem;
 }
-.menu-catagory__title {
+.menu__catagory__title {
   font-size: 1rem;
 }
 
@@ -650,29 +650,64 @@ h4 {
   }
 }
 @media screen and (min-width: 1024px) {
+  .menu h2 {
+    margin: 1rem 0;
+    left: 1rem;
+  }
+  .menu h2::after {
+    right: 110%;
+    bottom: 0;
+    top: 0;
+    width: 6px;
+    height: 100%;
+  }
   .menu__container {
     flex-direction: row;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+    box-shadow: inset 0 7px 6px -7px rgba(0, 0, 0, 0.4);
     margin-top: 0;
+    border-radius: 0;
+    background-color: #fff;
   }
-
   .menu__wrapper {
     width: auto;
+    margin-top: 2rem;
+    margin-bottom: 0;
+    padding: 1rem 1rem;
+    border-radius: 1rem;
   }
-
+  .menu__catagory {
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 0;
+  }
   .menu__photo {
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
     position: sticky;
-    top: 60px;
-    width: 40vw;
+    top: 20vh;
+    width: 50vw;
     object-fit: cover;
     z-index: 0;
   }
-
   .menu__btn {
-    position: absolute;
-    bottom: -50px;
+    position: fixed;
+    bottom: 10vh;
+    right: 14vw;
+  }
+
+  .title-wrapper {
+    position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: 0 -0.5em;
+    padding: 0 1em;
+    background-color: #f2f2f2;
+    z-index: 1;
   }
 }
 
