--- a/sass/1_abstracts/_mixins.scss
+++ b/sass/1_abstracts/_mixins.scss
@@ -9,10 +9,10 @@
     align-items: $align;
 }
 
-@mixin box-shadow ($inset: false) {
+@mixin box-shadow ($inset: false, $opacity: .1) {
     @if $inset {
         box-shadow: inset 0 7px 6px -7px rgba(0, 0, 0, .4);
     } @else {
-        box-shadow: 0 5px 8px rgba(0, 0, 0, .1);
+        box-shadow: 0 5px 8px rgba(0, 0, 0, $opacity);
     }
 }
