responsive menu, desktop version layout, reverse row

--- a/sass/4_components/_dish.scss
+++ b/sass/4_components/_dish.scss
@@ -112,8 +112,13 @@
     .dish {
         width: 30vw;
 
+        &__descr {
+            width: 85%;
+        }
+
         &__content-wrapper {
             @include flex(true, center, flex-start);
+            margin-right: 0;
         }
     }
 }
