--- a/css/main.css
+++ b/css/main.css
@@ -462,11 +462,15 @@ h4 {
   .dish {
     width: 30vw;
   }
+  .dish__descr {
+    width: 85%;
+  }
   .dish__content-wrapper {
     flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin-right: 0;
   }
 }
 .home {
@@ -593,7 +597,7 @@ h4 {
   height: 3px;
   background: #99E2D0;
 }
-.menu__container {
+.menu__body {
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -641,42 +645,38 @@ h4 {
 }
 
 @media screen and (min-width: 768px) {
-  .menu__photo {
-    top: -400px;
+  .menu__body {
+    margin-top: 400px;
   }
 
-  .menu__container {
-    margin-top: 400px;
+  .menu__photo {
+    top: -400px;
   }
 }
 @media screen and (min-width: 1024px) {
   .menu h2 {
-    margin: 1rem 0;
-    left: 1rem;
+    position: sticky;
+    top: 3rem;
+    width: 100%;
+    margin: 0;
+    padding: 1rem;
+    background-color: #f2f2f2;
+    z-index: 1;
   }
   .menu h2::after {
-    right: 110%;
-    bottom: 0;
-    top: 0;
+    left: 0;
+    top: 1rem;
     width: 6px;
-    height: 100%;
+    height: 1.1rem;
   }
-  .menu__container {
-    flex-direction: row;
-    display: flex;
-    justify-content: space-around;
+  .menu__body {
+    flex-direction: row-reverse;
+    justify-content: space-between;
     align-items: flex-start;
-    box-shadow: inset 0 7px 6px -7px rgba(0, 0, 0, 0.4);
     margin-top: 0;
+    margin-left: 5vw;
     border-radius: 0;
     background-color: #fff;
-  }
-  .menu__wrapper {
-    width: auto;
-    margin-top: 2rem;
-    margin-bottom: 0;
-    padding: 1rem 1rem;
-    border-radius: 1rem;
   }
   .menu__catagory {
     flex-direction: column;
@@ -685,18 +685,30 @@ h4 {
     align-items: flex-start;
     margin-bottom: 0;
   }
+  .menu__wrapper {
+    width: auto;
+    padding: 1rem 1rem;
+    margin-bottom: 0;
+    border-radius: 1rem;
+  }
   .menu__photo {
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
     position: sticky;
     top: 20vh;
-    width: 50vw;
+    width: 40vw;
+    margin: 0 auto;
     object-fit: cover;
     z-index: 0;
+    transition: border-radius 150ms, transform 150ms;
+  }
+  .menu__photo:hover {
+    border-radius: 1rem;
+    transform: scale(1.01);
   }
   .menu__btn {
     position: fixed;
     bottom: 10vh;
-    right: 14vw;
+    right: 24.5vw;
   }
 
   .title-wrapper {
@@ -707,7 +719,7 @@ h4 {
     margin: 0 -0.5em;
     padding: 0 1em;
     background-color: #f2f2f2;
-    z-index: 1;
+    z-index: 2;
   }
 }
 
