--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -16,7 +16,7 @@
         }
     }
 
-    &__container {
+    &__body {
         @include flex;
         position: relative;
         margin-top: 200px;
@@ -64,65 +64,78 @@
 } 
 
 @include tablet-only {
+    .menu__body {
+        margin-top: 400px;
+    }
+
     .menu__photo {
         top: -400px;
     }
 
-    .menu__container {
-        margin-top: 400px;
-    }
 }
 
 @include desktop-only {
     .menu {
         h2 {
-            margin: 1rem 0;
-            left: 1rem;
+            position: sticky;
+            top: 3rem;
+            width: 100%;
+            margin: 0;
+            padding: 1rem;
+            background-color: $bg-secondary;
+            z-index: 1;
 
             &::after {
-                right: 110%;
-                bottom: 0;
-                top: 0;
+                left: 0;
+                top: 1rem;
                 width: 6px;
-                height: 100%;
+                height: 1.1rem;
             }
         }
-
-        &__container {
-            @include flex(false, space-around, flex-start);
-            @include box-shadow(true);
+                
+        &__body {
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            align-items: flex-start;
             margin-top: 0;
+            margin-left: 5vw;
             border-radius: 0;
             background-color: $bg-primary;
         }
-
-        &__wrapper {
-            width: auto;
-            margin-top: 2rem;
-            margin-bottom: 0;
-            padding: 1rem 1rem;
-            border-radius: $border-radius;
-        }
-
         &__catagory {
             @include flex(true, space-between, flex-start);
             margin-bottom: 0;
-
         }
+
+
+        &__wrapper {
+            width: auto;
+            padding: 1rem 1rem;
+            margin-bottom: 0;
+            border-radius: $border-radius;
+        }
+
 
         &__photo {
             @include box-shadow(false, .5);
             position: sticky;
             top: 20vh;
-            width: 50vw;
+            width: 40vw;
+            margin: 0 auto;
             object-fit: cover;
             z-index: 0;
+            transition: border-radius 150ms, transform 150ms;
+
+            &:hover {
+                border-radius: $border-radius;
+                transform: scale(1.01);
+            }
         }
 
         &__btn {
             position: fixed;
             bottom: 10vh;
-            right: 14vw;
+            right: 24.5vw;
         }
     }
 
@@ -134,6 +147,6 @@
         margin: 0 -.5em;
         padding: 0 1em;
         background-color: $bg-secondary;
-        z-index: 1;
+        z-index: 2;
     }
 }
