--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,19 @@ h4 {
   font-size: 1.2em;
 }
 
+@media screen and (min-width: 1024px) {
+  .menu .header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    align-items: flex-end;
+    margin-right: 1.5rem;
+    background-color: transparent;
+  }
+  .menu .header__button {
+    display: none;
+  }
+}
 .footer {
   flex-direction: column;
   display: flex;
@@ -470,7 +483,6 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-right: 0;
   }
 }
 .home {
@@ -584,6 +596,12 @@ h4 {
   margin-bottom: 1.1em;
 }
 
+@keyframes reveal {
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .menu h2 {
   margin: 1em 0 1.5em 0;
   position: relative;
@@ -657,8 +675,8 @@ h4 {
   .menu h2 {
     position: sticky;
     top: 3rem;
-    width: 100%;
-    margin: 0;
+    width: 103%;
+    margin-left: -1%;
     padding: 1rem;
     background-color: #f2f2f2;
     z-index: 1;
@@ -700,10 +718,12 @@ h4 {
     object-fit: cover;
     z-index: 0;
     transition: border-radius 150ms, transform 150ms;
+    animation: reveal 500ms forwards;
+    transform: translateY(20px);
+    opacity: 0.7;
   }
   .menu__photo:hover {
     border-radius: 1rem;
-    transform: scale(1.01);
   }
   .menu__btn {
     position: fixed;
