responsive menu: use flex wrap to position btn

--- a/sass/4_components/_dish.scss
+++ b/sass/4_components/_dish.scss
@@ -111,6 +111,7 @@
 @include desktop-only {
     .dish {
         width: 30vw;
+        margin-top: 0;
 
         &__descr {
             width: 85%;
