--- a/css/main.css
+++ b/css/main.css
@@ -474,6 +474,7 @@ h4 {
 @media screen and (min-width: 1024px) {
   .dish {
     width: 30vw;
+    margin-top: 0;
   }
   .dish__descr {
     width: 85%;
@@ -674,23 +675,26 @@ h4 {
 @media screen and (min-width: 1024px) {
   .menu h2 {
     position: sticky;
-    top: 3rem;
+    top: 70px;
     width: 103%;
+    margin-top: 0;
     margin-left: -1%;
-    padding: 1rem;
+    margin-bottom: 0;
+    padding: 1rem 1.5rem;
     background-color: #f2f2f2;
     z-index: 1;
   }
   .menu h2::after {
-    left: 0;
+    left: 0.5rem;
     top: 1rem;
     width: 6px;
-    height: 1.1rem;
+    height: 1rem;
   }
   .menu__body {
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
+    flex-wrap: wrap;
     margin-top: 0;
     margin-left: 5vw;
     border-radius: 0;
@@ -700,13 +704,13 @@ h4 {
     flex-direction: column;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     margin-bottom: 0;
   }
   .menu__wrapper {
-    width: auto;
-    padding: 1rem 1rem;
-    margin-bottom: 0;
+    width: 40vw;
+    padding: 1rem 1rem 2rem 1rem;
+    margin-bottom: -56.44px;
     border-radius: 1rem;
   }
   .menu__photo {
@@ -726,9 +730,8 @@ h4 {
     border-radius: 1rem;
   }
   .menu__btn {
-    position: fixed;
-    bottom: 10vh;
-    right: 24.5vw;
+    position: sticky;
+    bottom: 5vh;
   }
 
   .title-wrapper {
@@ -736,7 +739,7 @@ h4 {
     top: 0;
     right: 0;
     left: 0;
-    margin: 0 -0.5em;
+    margin: 0 -1em;
     padding: 0 1em;
     background-color: #f2f2f2;
     z-index: 2;
