--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -1,6 +1,6 @@
-@keyframes reveal {
+@keyframes flip {
     to {
-        transform: translateY(0);
+        transform: rotateX(1turn);
         opacity: 1;
     }
 }
@@ -134,14 +134,15 @@
             margin: 0 auto;
             object-fit: cover;
             z-index: 0;
-            transition: border-radius 150ms, transform 150ms;
-            animation: reveal 500ms forwards;
-            transform: translateY(20px);
-            opacity: .7;
+            transition: border-radius 150ms;
+            animation: flip 1500ms cubic-bezier(0, 0.93, 0.68, 0.93) forwards;
+            transform: rotateX(.4turn);
+            opacity: 0;
 
             &:hover {
                 border-radius: $border-radius;
             }
+
         }
 
         &__btn {
